[gd_scene format=3 uid="uid://cohqp0e5kv6y6"]

[ext_resource type="Script" uid="uid://c1tetru6dysky" path="res://Screens/MainMenu/main_menu.gd" id="1_5g1o6"]
[ext_resource type="Texture2D" uid="uid://hpwwpcg3avdg" path="res://MockScreens/TelaInicial.png" id="2_5f575"]

[node name="MainMenu" type="Control" unique_id=1277759381]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g1o6")

[node name="TelaInicial" type="TextureRect" parent="." unique_id=799106094]
layout_mode = 0
offset_left = 1.0
offset_right = 869.0
offset_bottom = 488.0
scale = Vector2(2.2015886, 2.2015884)
texture = ExtResource("2_5f575")

[node name="PlayButton" type="Button" parent="." unique_id=228342899]
layout_mode = 0
offset_left = 174.0
offset_top = 346.0
offset_right = 470.0
offset_bottom = 444.0

[node name="CreditsButton" type="Button" parent="." unique_id=1422739791]
layout_mode = 0
offset_left = 174.0
offset_top = 450.0
offset_right = 470.0
offset_bottom = 548.0

[node name="EnciclopediaButton" type="Button" parent="." unique_id=1155488141]
layout_mode = 0
offset_left = 702.0
offset_top = 242.0
offset_right = 987.0
offset_bottom = 647.0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="EnciclopediaButton" to="." method="_on_enciclopedia_button_pressed"]
